# igdbscraper

./: README.md  pyproject.toml
.github/workflows/: ci.yml
igdbscraper/: __init__.py  platform.py
scripts/: capture_fixtures.py  platform.py  run_test.py
tests/: test_platform.py  test_platform_live.py  test_platform_mock.py
tests/fixtures/: platform_best.html  platform_games.html  platform_meta.html
