[project]
name = "igdbscraper"
version = "0.1"
description = "Python webscraper for the IGDB website"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.9",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]
