[project]
name = "igdbscraper"
version = "0.3"
description = "Python webscraper for the IGDB website"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "selenium>=4.33.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "poethepoet>=0.34.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]

[tool.poe.tasks]
test = "pytest --cov=igdbscraper --cov-report term-missing"

_imports = "ruff check --select I --fix ."
_format = "ruff format ."
format.sequence = ["_imports", "_format"]

_type = "mypy igdbscraper/"
_check = "ruff check ."
lint.sequence = ["_type", "_check"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["igdbscraper/"]
